Fixed broke gaps in image grid
Also More code cleanup & css cleanup

--- a/src/sections/community/styles.scss
+++ b/src/sections/community/styles.scss
@@ -162,14 +162,6 @@
         gap: 3.5rem;
         align-items: center;
         height: fit-content;
-        > a {
-          display: flex;
-          justify-content: center;
-          &:hover img {
-            transition: transform 0.2s;
-            transform: scale(1.05);
-          }
-        }
         &__desc-holder {
           flex-basis: 500px;
           display: flex;
@@ -204,9 +196,12 @@
                 width: 40px;
                 &:hover {
                   transform: scale(1.05);
+                  transition: transform 0.2s;
                 }
               }
             }
+
+            
           }
         }
       }
@@ -360,7 +355,7 @@
     display: grid;
     height: 350px;
     width: 90%;
-    gap: 0.5 rem;
+    gap: 0.5rem;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; 
     
     // For some reason if the grid-template-columns are set to
